testsuite/tests/polykinds/T7438.stderr

T7438.hs:6:14: error:
    • Couldn't match expected type ‘r1’ with actual type ‘r’
        ‘r1’ is untouchable
          inside the constraints: r3 ~ r2
          bound by a pattern with constructor:
                     Nil :: forall k (a :: k). Thrist a a,
                   in an equation for ‘go’
          at T7438.hs:6:4-6
      ‘r1’ is a rigid type variable bound by
        the inferred type of go :: Thrist r2 r3 -> r -> r1 at T7438.hs:6:1
      ‘r’ is a rigid type variable bound by
        the inferred type of go :: Thrist r2 r3 -> r -> r1 at T7438.hs:6:1
      Possible fix: add a type signature for ‘go’
    • In the expression: acc
      In an equation for ‘go’: go Nil acc = acc
    • Relevant bindings include
        acc :: r (bound at T7438.hs:6:8)
        go :: Thrist r2 r3 -> r -> r1 (bound at T7438.hs:6:1)
